// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferenceItem renders unlinked reference (no control_number) 1`] = `
<div
  className="ant-list-item"
>
  <Meta
    description={
      <AuthorList
        authors={
          Immutable.List [
            Immutable.Map {
              full_name: "Author",
            },
          ]
        }
        limit={5}
        recordId={undefined}
      />
    }
    title="Title"
  />
  <div
    className="ant-list-item-content"
  >
    <div>
      <PublicationInfo
        info={
          Immutable.Map {
            journal_title: "Journal",
          }
        }
      />
      <ArxivEprintList
        eprints={
          Immutable.List [
            Immutable.Map {
              value: "123456",
            },
          ]
        }
      />
      <DOIList
        dois={
          Immutable.List [
            Immutable.Map {
              value: "123456.12345",
            },
          ]
        }
      />
    </div>
  </div>
</div>
`;

exports[`ReferenceItem renders with full reference 1`] = `
<div
  className="ant-list-item"
>
  <Meta
    description={
      <AuthorList
        authors={
          Immutable.List [
            Immutable.Map {
              full_name: "Author",
            },
          ]
        }
        limit={5}
        recordId={12345}
      />
    }
    title={
      <Link
        replace={false}
        to="/literature/12345"
      >
        <Latex>
          Title
        </Latex>
      </Link>
    }
  />
  <div
    className="ant-list-item-content"
  >
    <div>
      <PublicationInfo
        info={
          Immutable.Map {
            journal_title: "Journal",
          }
        }
      />
      <ArxivEprintList
        eprints={
          Immutable.List [
            Immutable.Map {
              value: "123456",
            },
          ]
        }
      />
      <DOIList
        dois={
          Immutable.List [
            Immutable.Map {
              value: "123456.12345",
            },
          ]
        }
      />
    </div>
  </div>
</div>
`;
